--- a/catalog.html
+++ b/catalog.html
@@ -171,9 +171,6 @@
     </ul>
 
     <ul class="pagination-list">
-      <li class="button-back-page">
-        <a href="#">Назад</a>
-      </li>
       <li class="pagination-item-current">1</li>
       <li class="pagination-item">
         <a href="#">2</a>
@@ -181,11 +178,15 @@
       <li class="pagination-item">
         <a href="#">3</a>
       </li>
+    </ul>
+    <ul class="button-back-forward">
       <li class="button-forward-page">
         <a href="#">Вперед</a>
       </li>
+      <li class="button-back-page">
+      <a href="#">Назад</a>
+    </li>
     </ul>
-
   </section>
 
 </main>
@@ -223,8 +224,7 @@
   </p>
 </div>
 
-
-<div class="footer-bottom">
+  <div class="footer-bottom">
   <ul class="footer-social">
     <li>
       <a class="social-button" href="#">facebook.com</a>
@@ -240,9 +240,6 @@
     <a href="https://htmlacademy.ru"></a>
   </p>
 </div>
-
-
-
 </footer>
 </body>
 </html>
