--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <header class="main-header">
   <a class="main-header-logo">
-    <img alt="Логотип магазина Device" height="45" src="logo-main" width="175">
+    <img src="img/logo-main"  height="45"  width="175" alt="Логотип магазина Device">
   </a>
   <!-- Здесь будет форма -->
   <ul class="user-navigation">
@@ -58,6 +58,7 @@
     </ul>
   </nav>
 </header>
+
 <main class="container">
   <article class="main-slider-1">
     <h2 class="visually-hidden">Селфи-палка</h2>
@@ -76,6 +77,7 @@
         <span class="main-features-value">Материал</span>
       </li>
     </ul>
+
   </article>
   <article class="main-slider-2">
     <h2 class="visually-hidden">Фитнес браслет</h2>
@@ -89,6 +91,7 @@
       </li>
     </ul>
   </article>
+
   <article class="main-slider-3">
     <h2 class="visually-hidden">Квадракоптер</h2>
     <b>Порхает как бабочка, жалит как пчела!</b>
@@ -104,7 +107,8 @@
       </li>
     </ul>
   </article>
-  <article class="catalog-list">
+
+  <section class="catalog-list">
     <h2 class="visually-hidden">Каталог товаров</h2>
     <ul class="catalog-list">
       <li>
@@ -126,47 +130,43 @@
         <a href="#">Квадрокоптеры</a>
       </li>
     </ul>
-  </article>
-  <h2 class="visually-hidden">Наши услуги</h2>
+  </section>
+
   <section class="service">
-    <ul class="delivery">
+    <h2 class="visually-hidden">Наши услуги</h2>
+    <ul class="services">
       <li>
+        <a href="#">Доставка</a>
+      </li>
+      <li>
+        <a href="#">Гарантия</a>
+      </li>
+      <li>
+        <a href="#">Кредит</a>
+      </li>
+    </ul>
+    <ul class="services-list">
+      <li class="delivery">
         <h3>Доставка</h3>
       </li>
       <li>
         <p>Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно! Ведь мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.</p>
       </li>
-    </ul>
-    <ul class="warranty">
-      <li>
-        <h3>Гарантия</h3>
+    <li class="warranty">
+      <h3>Гарантия</h3>
       </li>
       <li>
         <p>Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый. Товар, не&nbsp;дом, конечно&nbsp;же.</p>
       </li>
-    </ul>
-    <ul class="credit">
-      <li>
-        <h3>Кредит</h3>
+    <li class="credit">
+      <h3>Кредит</h3>
       </li>
       <li>
         <p>Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита. Выгодные для нашего банка, разумеется.</p>
       </li>
     </ul>
-    <div class="services">
-      <ul class="services">
-        <li>
-          <a href="#">Доставка</a>
-        </li>
-        <li>
-          <a href="#">Гарантия</a>
-        </li>
-        <li>
-          <a href="#">Кредит</a>
-        </li>
-      </ul>
-    </div>
   </section>
+
   <section class="brands">
     <h2 class="visually-hidden">Наши бренды</h2>
     <ul class="brands">
@@ -184,6 +184,7 @@
       </li>
     </ul>
   </section>
+
   <section class="about-us">
     <h2>О Нас</h2>
     <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас</p>
@@ -195,13 +196,16 @@
     </ul>
     <a href="#">Подробнее о нас</a>
   </section>
+
   <section class="contacts">
     <h2>Контакты</h2>
     <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
     <img alt="Карта" height="320" src="img/img:map-big.png" width="460">
     <a href="#">Напишите нам</a>
   </section>
+
 </main>
+
 <footer>
   <div class="footer-top">
     <img alt="Логотип магазина Device" height="45" src="img/map" width="175">
@@ -217,6 +221,7 @@
       </li>
     </ul>
   </div>
+
   <div class="footer-middle">
     <p class="footer__address">г.Москва , Улица строителей , 15</p>
     <ul class="site-navigation">
@@ -233,6 +238,7 @@
     <p>Тел.:<a href="tel">+7(495)495-95-95</a>
     </p>
   </div>
+
   <div class="footer-bottom">
     <ul class="footer-social">
       <li>
