--- a/catalog.html
+++ b/catalog.html
@@ -103,6 +103,8 @@
       <li class="popular">
         <a href="#">По популярности</a>
       </li>
+    </ul>
+      <ul class="increasing-deacreasing">
       <li class="to-increase">
         <a href="#">По увеличению</a>
       </li>
