--- a/catalog.html
+++ b/catalog.html
@@ -122,7 +122,7 @@
           <h3>Любительская селфи-палка</h3>
         </a>
         <p class="catalog-item-image">
-          <img alt="Любительская селфи-палка" height="380" src="img/product-1.jpg" width="360">
+          <img src="img/product-1.jpg" height="380"  width="360" alt="Любительская селфи-палка">
         </p>
         <b>500 руб.</b>
         <div>
@@ -136,7 +136,7 @@
           <h3>Профессиональная селфи-палка</h3>
         </a>
         <p class="catalog-item-image">
-          <img alt="Профессиональная селфи-палка" height="380" src="img/product-2.jpg" width="360">
+          <img src="img/product-2.jpg" height="380" width="360" alt="Профессиональная селфи-палка">
         </p>
         <b>1500 руб.</b>
         <div>
@@ -149,7 +149,8 @@
         <a href="catalog-item-3.html">
           <h3>Непотопляемая селфи-палка</h3>
         </a>
-        <p class="catalog-item-image"><img alt="Непотопляемая селфи-палка" height="380" src="img/product-3.jpg" width="360">
+        <p class="catalog-item-image">
+          <img src="img/product-3.jpg" height="380"  width="360" alt="Непотопляемая селфи-палка">
         </p>
         <b>2500 руб.</b>
         <div>
@@ -162,7 +163,8 @@
         <a href="catalog-item-4.html">
           <h3>Селфи палка «Следуй за мной»</h3>
         </a>
-        <p class="catalog-item-image"><img alt="Селфи палка «Следуй за мной»" height="380" src="img/product-4.jpg" width="360">
+        <p class="catalog-item-image">
+          <img src="img/product-4.jpg" height="380"  width="360" alt="Селфи палка «Следуй за мной»>
         </p>
         <b>4900 руб.</b>
         <div>
@@ -195,7 +197,7 @@
 
 <footer>
   <div class="footer-top">
-  <img alt="Логотип магазина Device" height="45" src="img/map" width="175">
+  <img src="img/map" height="45"  width="175" alt="Логотип магазина Device" >
   <ul class="footer_user">
     <li>
       <a class="footer-button-login" href="#">Войти</a>
