--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <article class="main-slider-1">
     <h2 class="visually-hidden">Селфи-палка</h2>
     <b>Делай селфи, как Бен Стиллер</b>
-    <img alt="Селфи-палка" height="1458" src="img/selfi-stick-main.jpg" width="1152">
+    <img src="img/selfi-stick-main.jpg"  height="1458"  width="1152" alt="Селфи-палка">
     <p>Самая длинная палка для селфи доступна в&nbsp;нашем магазине. Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.</p>
     <a href="#">Подробнее</a>
     <ul class="feature-list">
@@ -82,7 +82,7 @@
   <article class="main-slider-2">
     <h2 class="visually-hidden">Фитнес браслет</h2>
     <b>Худеем правильно!</b>
-    <img alt="Фитнес браслет" height="1458" src="img/i-clock.jpg" width="1152">
+    <img src="img/i-clock.jpg" height="1458"  width="1152" alt="Фитнес браслет">
     <p>Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы не&nbsp;пропускать занятия и&nbsp;соблюдать диету.</p>
     <a href="#">Подробнее</a>
     <ul class="feature-list">
@@ -95,7 +95,7 @@
   <article class="main-slider-3">
     <h2 class="visually-hidden">Квадракоптер</h2>
     <b>Порхает как бабочка, жалит как пчела!</b>
-    <img alt="Квадракоптер" height="1458" src="img/qudrocopter.jpg" width="1152">
+    <img src="img/qudrocopter.jpg" height="1458"  width="1152" alt="Квадракоптер">
     <p>Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.</p>
     <a href="#">Подробнее</a>
     <ul class="feature-list">
@@ -200,7 +200,7 @@
   <section class="contacts">
     <h2>Контакты</h2>
     <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.Всякое бывает.</p>
-    <img alt="Карта" height="320" src="img/img:map-big.png" width="460">
+    <img src="img/img:map-big.png" height="320"  width="460" alt="Карта">
     <a href="#">Напишите нам</a>
   </section>
 
@@ -208,7 +208,7 @@
 
 <footer>
   <div class="footer-top">
-    <img alt="Логотип магазина Device" height="45" src="img/map" width="175">
+    <img src="img/map" height="45"  width="175" alt="Логотип магазина Device">
     <ul class="footer_user">
       <li>
         <a class="footer-button-login" href="#">Войти</a>
